manifest/openmrs/openmrs-Service.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: open-mrs-lb
spec:
  type: LoadBalancer
  selector:
    app: openmrs
  ports:
    - name: webport
      port: 35000
      targetPort: 8080
